--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "json-server": "json-server --watch db.json -p 8080",
     "build": "vite build",
     "preview": "vite preview"
   },
